--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                             <div class="new-address">
 
                                 <div class="form-group">
+                                    <label for="new-address-type">Type of Address:</label>
+                                    <input type="text" class="form-control new-address-type">
+                                </div>
+                                <div class="form-group">
                                     <label for="new-street">Street:</label>
                                     <input type="text" class="form-control new-street">
                                 </div>
@@ -80,6 +84,9 @@
                         <ul id="addresses">
 
                         </ul>
+                    </div>
+                    <div id="show-banana">
+                        <img src="http://vignette2.wikia.nocookie.net/arresteddevelopment/images/1/18/1x02_Top_Banana_(34).png/revision/latest?cb=20120118045253" alt="There's always money in the banana stand." width="70%">
                     </div>
                 </div>
             </div>
