add to easter egg

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 </div>
             </div>
 
+            <audio id="tim">
+                <source src="http://www.nebo.edu/learning_resources/ppt/sounds/Tim%20Allen%20aargh2.wav">
+            </audio>
 
 
 <!-- end of wrapper -->
